# Custom-Steam-Dashboard

./: .coveragerc  .env.build.example  .env.example  .gitignore  .semgrep.yml  LICENSE  QUICK_TEST_GUIDE.md  README.md  TEST_REPORT.md  build_executable.bat  build_executable.sh  check_build_deps.py  comparison_chart_trace.md  generate_config.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  restore_config.py  run_tests.bat  run_tests.py  run_tests.sh
LLM_analysis/: Claude_Analysis.md  GPT_Analysis.md  Gemini_Analysis.md  LLM_ANALYSIS_REPORT.md
app/: config.py  main.py  main_server.py  main_window.py
common/: parse_html.py
docs/: AUTH_AND_SIGNING_README.md  JWT_ANALIZA_BEZPIECZENSTWA.md  JWT_BEST_PRACTICES.md  JWT_DOCUMENTATION_SUMMARY.md  JWT_IMPLEMENTACJA.md  JWT_WPLYW_NA_WYDAJNOSC.md  RATE_LIMITING_VALIDATION.md  SERVER_DOCUMENTATION_PL.md  TECHNICAL_DOCUMENTATION_PL.md  UI_DOCUMENTATION_PL.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_291a362771783b9e___init___py.html  z_291a362771783b9e_database_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_main_server_py.html  z_5f5a17c013354698_main_window_py.html  z_9a0a42283705dd8f___init___py.html  z_9a0a42283705dd8f__base_http_py.html  z_9a0a42283705dd8f_deals_service_py.html  z_9a0a42283705dd8f_models_py.html  z_9a0a42283705dd8f_parse_html_py.html  z_9a0a42283705dd8f_steam_service_py.html  z_adebc8a9b0574ea2___init___py.html  z_adebc8a9b0574ea2_user_data_manager_py.html  z_b74c695cb2aa6c5f___init___py.html  z_b74c695cb2aa6c5f_api_client_py.html  z_b74c695cb2aa6c5f_signing_py.html  z_c27f2b98f88de14d___init___py.html  z_c27f2b98f88de14d_deals_client_py.html  z_c27f2b98f88de14d_server_client_py.html  z_d19778d2e34a1e3d___init___py.html  z_d19778d2e34a1e3d_app_py.html  (+17 more)
metrics/: README.md  (+14 more)
(+118 files in other folders)
